@@ -4,10 +4,8 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import shop.app.dto.order.CreateOrderRequest;
-import shop.app.dto.order.OrderResponseDto;
-import shop.app.dto.order.StatusRequest;
-import shop.app.dto.order.UpdateOrderRequest;
+import shop.app.dto.CustomerInfo;
+import shop.app.dto.order.*;
 import shop.app.dto.product.ProductInfo;
 import shop.app.entity.*;
 import shop.app.exception.OrderNotFoundException;
@@ -24,6 +22,7 @@ import shop.app.validator.OrderValidator;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -36,6 +35,8 @@ public class OrderService {
     private final CustomerRepository customerRepository;
     private final OrderMapper orderMapper;
     private final OrderValidator orderValidator;
+    private final AccountServiceClient accountServiceClient;
+    private final CrmServiceClient crmServiceClient;
 
     @Transactional
     public UUID createOrder(Long customerId, CreateOrderRequest orderRequest) {
@@ -81,7 +82,7 @@ public class OrderService {
                 .map(product -> {
                     List<ProductEntity> productEntities = orderEntity.getOrderedProducts().stream()
                             .map(OrderedProductEntity::getProduct)
-                            .collect(Collectors.toList());
+                            .toList();
 
                     ProductEntity productEntity = productEntities.stream()
                             .filter(p -> p.getUuid().equals(product.getProductId()))
@@ -100,7 +101,7 @@ public class OrderService {
                             product, productEntity);
                     productEntity.setQuantity(productEntity.getQuantity() - product.getQuantity());
                     return orderedProductEntity;
-                }).collect(Collectors.toList());
+                }).toList();
 
         orderEntity.getOrderedProducts().addAll(newOrderedProducts);
         orderRepository.save(orderEntity);
@@ -123,6 +124,45 @@ public class OrderService {
                         .build()
                 ).collect(Collectors.toList());
         return orderMapper.toOrderResponseDto(productsView, orderId);
+    }
+
+    @Transactional
+    public Map<UUID, OrderInfo> getGroupCustomerOrdersByProductId() {
+        List<OrderEntity> orderEntity = orderRepository.findAllOrdersByStatusIn(
+                List.of(OrderStatus.CREATED, OrderStatus.CONFIRMED));
+
+        List<String> customerLogins = orderEntity.stream()
+                .map(order -> order.getCustomer().getLogin())
+                .distinct()
+                .toList();
+
+        CompletableFuture<Map<String, Integer>> accountNumber = accountServiceClient.getCustomerAccountNumber(customerLogins)
+                .exceptionally(ex -> {
+                    log.error("Failed to fetch account numbers", ex);
+                    return Map.of();
+                });
+        CompletableFuture<Map<String, Integer>> inn = crmServiceClient.getCustomerAccountNumber(customerLogins)
+                .exceptionally(ex -> {
+                    log.error("Failed to fetch inn", ex);
+                    return Map.of();
+                });
+        return CompletableFuture.allOf(accountNumber, inn).thenApply(result -> orderEntity.stream()
+                        .flatMap(order -> order.getOrderedProducts().stream()
+                                .map(orderedProduct ->
+                                        Map.entry(orderedProduct.getProduct().getUuid(), OrderInfo.builder()
+                                                .id(orderedProduct.getOrder().getUuid())
+                                                .customer(CustomerInfo.builder()
+                                                        .id(orderedProduct.getOrder().getCustomer().getId())
+                                                        .accountNumber(accountNumber.join().getOrDefault(order.getCustomer().getLogin(), null))
+                                                        .email(orderedProduct.getOrder().getCustomer().getEmail())
+                                                        .inn(inn.join().getOrDefault(order.getCustomer().getLogin(), null))
+                                                        .build())
+                                                .status(orderedProduct.getOrder().getOrderStatus())
+                                                .deliveryAddress(orderedProduct.getOrder().getDeliveryAddress())
+                                                .quantity(orderedProduct.getQuantity())
+                                                .build())))
+                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)))
+                .join();
     }
 
     @Transactional
